(#2017) Fix moderation sidebar z-index

--- a/docroot/profiles/custom/cgov_site/themes/custom/cgov/cgov_common/src/entrypoints/global/Common.scss
+++ b/docroot/profiles/custom/cgov_site/themes/custom/cgov/cgov_common/src/entrypoints/global/Common.scss
@@ -240,8 +240,8 @@ table.table-default tfoot td {
 
 // Overrides for the Moderation Sidebar module.
 body {
-  .ui-dialog.ui-dialog-off-canvas #drupal-off-canvas {
-    z-index: 10000;
+  .ui-dialog.ui-dialog-off-canvas {
+    z-index: 9998;
   }
 
   .ui-dialog-off-canvas #drupal-off-canvas .button,
